<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:design="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.udistrital.presentacion.usuario.AyudaActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="AYUDA"
                android:gravity="center_horizontal"
                android:textSize="@dimen/tamañoLetraTitulo"
                android:textStyle="bold"
                android:textColor="@android:color/holo_blue_light"
                />



            <TextView
                android:id="@+id/preguta1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/preguta_1"
                android:textSize="21sp"
                android:padding="16sp"
                android:gravity="center"
                android:textColor="@color/category_colors"
                />
            <TextView
                android:id="@+id/prespuesta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/respuesta_1"
                android:textSize="17sp"
                android:padding="16sp"

                />

            <TextView
                android:id="@+id/preguta2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pregunta_2"
                android:textSize="21sp"
                android:padding="16sp"
                android:gravity="center"
                android:textColor="@color/category_colors"
                />
            <TextView
                android:id="@+id/prespuesta1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/respuesta_2"
                android:textSize="17sp"
                android:padding="16sp"

                />
            <TextView
                android:id="@+id/preguta3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pregunta_3"
                android:textSize="21sp"
                android:padding="16sp"
                android:gravity="center"
                android:textColor="@color/category_colors"
                />
            <TextView
                android:id="@+id/prespuesta2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Los marcadores se pueden descargar del siguiente link"
                android:textSize="17sp"
                android:padding="16sp"

                />

            <TextView
                android:id="@+id/mar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Marcadores"
                android:textSize="17sp"
                android:padding="16sp"

                />
            <TextView
                android:id="@+id/preguta4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pregunta_5"
                android:textSize="21sp"
                android:padding="16sp"
                android:gravity="center"
                android:textColor="@color/category_colors"
                />
            <TextView
                android:id="@+id/prespuesta3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="El manual de usuario se puede descargar del siguiente link"
                android:textSize="17sp"
                android:padding="16sp"

                />
            <TextView
                android:id="@+id/man"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Manual de usuario"
                android:textSize="17sp"
                android:padding="16sp"

                />

            <TextView
                android:id="@+id/preguta5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pregurnta_5"
                android:textSize="21sp"
                android:padding="16sp"
                android:gravity="center"
                android:textColor="@color/category_colors"
                />
            <TextView
                android:id="@+id/prespuesta5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/respuesta_5"
                android:textSize="17sp"
                android:padding="16sp"

                />





        </LinearLayout>
        </ScrollView>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom">

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_gravity="top"
            android:background="@drawable/sombra" />

        <android.support.design.widget.BottomNavigationView
            android:id="@+id/navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="0"
            android:visibility="visible"
            design:menu="@menu/menu_navigation" />
        </FrameLayout>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
