<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:design="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.udistrital.presentacion.usuario.PerfilActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">



        <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/perfilMay"
            android:gravity="center_horizontal"
            android:textSize="@dimen/tamañoLetraTitulo"
            android:textStyle="bold"
            android:textColor="@android:color/holo_blue_light"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/borde">

            <ImageView
                android:id="@+id/photoImageView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="16dp"
                android:background="@drawable/ic_perfil_es"
                android:paddingLeft="16sp"/>

            <LinearLayout
                android:paddingTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <TextView
                android:id="@+id/nameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/emailTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="16sp"/>

             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/editar"
                 />



            </LinearLayout>


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/log_out"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:onClick="logOut"
                />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/avanceT"
            android:gravity="center_horizontal"
            android:textSize="@dimen/tamañoLetraTitulo"
            android:textStyle="bold"
            android:textColor="@android:color/holo_blue_light"
            />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/avanceT"
            android:layout_weight="1"
            android:textSize="@dimen/tamano_letra_normal"
            android:textStyle="bold"
            android:textColor="@android:color/holo_blue_light"
            />
        <TextView
            android:id="@+id/avance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="50"
            android:layout_weight="1"
            android:textSize="@dimen/tamañoLetraTitulo"/>

    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

        <ProgressBar
            android:id="@+id/progresoTutorial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:max="100"
            android:progress="50"
            android:paddingBottom="16dp"
            android:paddingTop="16dp"

            />

            <TextView
                android:id="@+id/unidad1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="16sp"
                android:text="UNIDAD 1"/>

            <TextView
                android:id="@+id/unidad2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="UNIDAD 2"
                android:paddingBottom="16sp"/>

            <TextView
                android:id="@+id/unidad3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="UNIDAD 3"
                android:paddingBottom="16sp"
                />

            <TextView
                android:id="@+id/unidad4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="UNIDAD 4"
                android:paddingBottom="16sp"/>

            <TextView
                android:id="@+id/unidad5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="UNIDAD 5"
                android:paddingBottom="16sp"/>

            <TextView
                android:id="@+id/testFinal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="ESTADO TEST FINAL"
                android:paddingBottom="16sp"/>

       <!--     <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="tutorial"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:onClick="tutorial"
                />-->


        </LinearLayout>


      <!--  <TextView
            android:id="@+id/idTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="14sp" />-->
      <!--  <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/log_out"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:onClick="logOut"
            />-->



        <TextView
            android:id="@+id/texto_test"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:textSize="@dimen/tamano_letra_normal"
            android:textStyle="bold"
            android:textColor="@android:color/holo_blue_light"
            android:text="Info"/>
        <Button
            android:id="@+id/testIncial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Test iNICIAL"
            style="@style/Widget.AppCompat.Button.Colored"
            />



           </LinearLayout>
        </ScrollView>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom">

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_gravity="top"
            android:background="@drawable/sombra" />

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_weight="1"
        android:visibility="visible"
        design:menu="@menu/menu_navigation" />
        </FrameLayout>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
